apps/healthview-echoexplore/deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: echoexplore-frontend
  namespace: healthview-echoexplore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: echoexplore-frontend
  template:
    metadata:
      labels:
        app: echoexplore-frontend
    spec:
      containers:
        - name: echoexplore-frontend
          image: ghcr.io/curatimexai/echoexplore-frontend:3c59e6d97b378e6c29419df54673379b0ad7b6f5
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 5
