apps/healthview-echoexplore/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: echoexplore-backend-service
  namespace: healthview-echoexplore
spec:
  type: ClusterIP
  selector:
    app: echoexplore-backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
