apps/healthview-echoexplore/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echoexplore-ingress
  namespace: healthview-echoexplore
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - echoexplore.nightingaleheart.com
        - api-echoexplore.nightingaleheart.com
      secretName: echoexplore-tls
  rules:
    - host: echoexplore.nightingaleheart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echoexplore-frontend-service
                port:
                  number: 80
    - host: api-echoexplore.nightingaleheart.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: echoexplore-backend-service
                port:
                  number: 5000
